2006-12-15  Jens Persson
    
    * Initial release