@@ -1,4 +1,9 @@
 <literallayout>
+<emphasis role="bold">2006-12-17  Jens Persson</emphasis>
+    
+    * Added Pipeline chapter
+    * Updated introduction
+
 <emphasis role="bold">2006-12-15  Jens Persson</emphasis>
     
     * Initial release
