@@ -1,0 +1,192 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<refsect1>
+  <para>
+  A pipeline is a toplevel bin with its own bus and clock. If your program only contains one
+  bin-like object, this is what you're looking for. You create a pipeline object with:
+  <synopsis>my_pipeline = gst.Pipeline("my-pipeline")</synopsis>
+  A pipeline is just a "container" where you can put other objects and when everything is
+  in place and the file to play is specified you just set the pipelines state to gst.STATE_PLAYING
+  and there should be multimedia coming out of it.
+  </para>
+  
+  <para>
+  In this first example I have taken the Audio-Player from the Playbin chapter and
+switched the playbin out for my own mp3 capable pipeline. You can also testdrive pipelines
+with a program called gst-launch-0.10 directly in a shell. IE the next example below would look
+like this:</para>
+<synopsis>gst-launch-0.10 filesrc location=music.mp3 ! mad ! audioconvert ! alsasink</synopsis>
+  <synopsis>#!/usr/bin/env python
+
+import sys, os, os.path
+import pygtk, gtk, gobject
+import pygst
+pygst.require("0.10")
+import gst
+
+class GTK_Main:
+	
+	def __init__(self):
+		window = gtk.Window(gtk.WINDOW_TOPLEVEL)
+		window.set_title("MP3-Player")
+		window.set_default_size(400, 300)
+		window.connect("destroy", gtk.main_quit, "WM destroy")
+		vbox = gtk.VBox()
+		window.add(vbox)
+		self.entry = gtk.Entry()
+		vbox.pack_start(self.entry, False, True)
+		self.button = gtk.Button("Start")
+		self.button.connect("clicked", self.start_stop)
+		vbox.add(self.button)
+		window.show_all()
+		
+		self.player = gst.Pipeline("player")
+		source = gst.element_factory_make("filesrc", "file-source")
+		self.player.add(source)
+		decoder = gst.element_factory_make("mad", "mp3-decoder")
+		self.player.add(decoder)
+		conv = gst.element_factory_make("audioconvert", "converter")
+		self.player.add(conv)
+		sink = gst.element_factory_make("alsasink", "alsa-output")
+		self.player.add(sink)
+		gst.element_link_many(source, decoder, conv, sink)
+		bus = self.player.get_bus()
+		bus.add_signal_watch()
+		bus.connect('message', self.on_message)
+		
+	def start_stop(self, w):
+		if self.button.get_label() == "Start":
+			filepath = self.entry.get_text()
+			if os.path.exists(filepath):
+				self.button.set_label("Stop")
+				self.player.get_by_name("file-source").set_property('location', filepath)
+				self.player.set_state(gst.STATE_PLAYING)
+		else:
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+						
+	def on_message(self, bus, message):
+		t = message.type
+		if t == gst.MESSAGE_EOS:
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+		elif t == gst.MESSAGE_ERROR:
+			err, debug = message.parse_error()
+			print "Error: %s" % err, debug
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+
+gtk.gdk.threads_init()
+GTK_Main()
+gtk.main()
+</synopsis>
+
+  <para>This next example is playing mpeg videos. Some demuxers, such as mpegdemux, uses
+   dynamic pads which are created at runtime and therefor you can't link between the demuxer
+  and the next element in the pipeline before the pad has been created at runtime. Watch out
+  for the demuxer_callback() function below. THIS EXAMPLE IS NOT WORKING YET!!!
+  </para>
+
+<synopsis>#!/usr/bin/env python
+
+import sys, os, os.path
+import pygtk, gtk, gobject
+import pygst
+pygst.require("0.10")
+import gst
+
+class GTK_Main:
+	
+	def __init__(self):
+		window = gtk.Window(gtk.WINDOW_TOPLEVEL)
+		window.set_title("Mpeg-Player")
+		window.set_default_size(500, 400)
+		window.connect("destroy", gtk.main_quit, "WM destroy")
+		vbox = gtk.VBox()
+		window.add(vbox)
+		hbox = gtk.HBox()
+		vbox.pack_start(hbox, False)
+		self.entry = gtk.Entry()
+		hbox.add(self.entry)
+		self.button = gtk.Button("Start")
+		hbox.pack_start(self.button, False)
+		self.button.connect("clicked", self.start_stop)
+		self.movie_window = gtk.DrawingArea()
+		vbox.add(self.movie_window)
+		window.show_all()
+		
+		self.player = gst.Pipeline("player")
+		source = gst.element_factory_make("filesrc", "file-source")
+		self.player.add(source)
+		demuxer = gst.element_factory_make("mpegdemux", "demuxer")
+		self.player.add(demuxer)
+		demuxer.connect("pad-added", self.demuxer_callback)
+		self.video_decoder = gst.element_factory_make("mpeg2dec", "video-decoder")
+		self.player.add(self.video_decoder)
+		self.audio_decoder = gst.element_factory_make("mad", "audio-decoder")
+		self.player.add(self.audio_decoder)
+		audioconv = gst.element_factory_make("audioconvert", "converter")
+		self.player.add(audioconv)
+		audiosink = gst.element_factory_make("autoaudiosink", "audio-output")
+		self.player.add(audiosink)
+		videosink = gst.element_factory_make("autovideosink", "video-output")
+		self.player.add(videosink)
+		self.queue = gst.element_factory_make("queue", "queue")
+		self.player.add(self.queue)
+		gst.element_link_many(source, demuxer)
+		gst.element_link_many(self.video_decoder, videosink)
+		gst.element_link_many(self.audio_decoder, audioconv, audiosink)
+		bus = self.player.get_bus()
+		bus.add_signal_watch()
+		bus.enable_sync_message_emission()
+		bus.connect('message', self.on_message)
+		bus.connect('sync-message::element', self.on_sync_message)
+		
+	def start_stop(self, w):
+		if self.button.get_label() == "Start":
+			filepath = self.entry.get_text()
+			if os.path.exists(filepath):
+				self.button.set_label("Stop")
+				self.player.get_by_name("file-source").set_property('location', filepath)
+				self.player.set_state(gst.STATE_PLAYING)
+		else:
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+						
+	def on_message(self, bus, message):
+		t = message.type
+		if t == gst.MESSAGE_EOS:
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+		elif t == gst.MESSAGE_ERROR:
+			err, debug = message.parse_error()
+			print "Error: %s" % err, debug
+			self.player.set_state(gst.STATE_NULL)
+			self.button.set_label("Start")
+	
+	def on_sync_message(self, bus, message):
+		if message.structure is None:
+			return
+		message_name = message.structure.get_name()
+		if message_name == 'prepare-xwindow-id':
+			imagesink = message.src
+			imagesink.set_property('force-aspect-ratio', True)
+			imagesink.set_xwindow_id(self.movie_window.window.xid)
+	
+	def demuxer_callback(self, demuxer, pad):
+		if pad.get_property("template").name_template == "video_%02d":
+			dec_pad = self.video_decoder.get_pad("sink")
+			pad.link(dec_pad)
+		elif pad.get_property("template").name_template == "audio_%02d":
+			dec_pad = self.audio_decoder.get_pad("sink")
+			pad.link(dec_pad)
+		
+GTK_Main()
+gtk.gdk.threads_init()
+gtk.main()
+</synopsis>
+
+</refsect1>
+
+
