@@ -31,6 +31,11 @@
         <xi:include href="gst-playbin.xml"/>
     </chapter>
     
+   <chapter id="pipeline">
+        <title>3. Pipeline</title>
+        <xi:include href="gst-pipeline.xml"/>
+    </chapter>
+
     <appendix id="pygst-tut-changelog">
         <title>ChangeLog</title>
         <xi:include href="ChangeLog.xml"/>
