@@ -1,3 +1,8 @@
+2006-12-17  Jens Persson
+    
+    * Added Pipeline chapter
+    * Updated introduction
+
 2006-12-15  Jens Persson
     
     * Initial release
